# Earthquake-Analytics

./: README.md  pyproject.toml
etl/: 01_bronze_ingestion.ipynb
