[project]
name = "utils"
version = "0.0.1"
authors = [{ name = "SaiKiran Ponnada" }]
requires-python = ">=3.10"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "streamlit>=1.53.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    # "databricks-dlt",  # Temporarily disabled due to thrift dependency issues
    # "databricks-connect>=15.4,<15.5",  # Temporarily disabled due to thrift dependency issues
    "ipykernel",
]
databricks = [
    "databricks-sql-connector>=4.2.4",
]

[project.scripts]
main = "utils.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
